amf-cli/shared/src/test/resources/graphql/tck/apis/invalid/broken-covariance.api.report
ModelId: file://amf-cli/shared/src/test/resources/graphql/tck/apis/invalid/broken-covariance.api.graphql
Profile: GraphQL
Conforms: false
Number of results: 3

Level: Violation

- Constraint: http://a.ml/vocabularies/amf/parser#required-fields
  Message: field 'name' can't be nullable because it's definition is non-nullable
  Severity: Violation
  Target: file://amf-cli/shared/src/test/resources/graphql/tck/apis/invalid/broken-covariance.api.graphql#/declares/shape/DogOwnerWrong
  Property: http://a.ml/vocabularies/shapes#schema
  Range: [(31,4)-(31,16)]
  Location: 

- Constraint: http://a.ml/vocabularies/amf/parser#required-fields
  Message: Field 'pet' must be the same type as defined in interface 'PetOwner' 
  Severity: Violation
  Target: file://amf-cli/shared/src/test/resources/graphql/tck/apis/invalid/broken-covariance.api.graphql#/declares/shape/DogOwnerWrong
  Property: http://a.ml/vocabularies/shapes#schema
  Range: [(32,4)-(32,17)]
  Location: 

- Constraint: http://a.ml/vocabularies/amf/parser#required-fields
  Message: Field 'otherPets' must be the same type as defined in interface 'PetOwner' 
  Severity: Violation
  Target: file://amf-cli/shared/src/test/resources/graphql/tck/apis/invalid/broken-covariance.api.graphql#/declares/shape/DogOwnerWrong
  Property: http://a.ml/vocabularies/shapes#schema
  Range: [(33,4)-(33,25)]
  Location: 
